unpackaged/objects/PM_Meeting_Minutes__c.object
<CustomObject>
  <description>Internal object (Used within CRM team)  to track meeting mi nutes for project meetings and Success Team Meetings etc.</description>
  <fields>
    <fullName>Attendees__c</fullName>
    <defaultValue>$User.FirstName &amp; ' ' &amp;  $User.LastName</defaultValue>
    <inlineHelpText>Add the names of the attendees</inlineHelpText>
    <label>Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Meeting_end__c</fullName>
    <label>Meeting end</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Meeting_start__c</fullName>
    <label>Meeting start</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Meeting_status__c</fullName>
    <label>Meeting status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Planned</fullName>
        </value>
        <value>
          <fullName>Completed</fullName>
        </value>
        <value>
          <fullName>Cancelled</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Enter the notes from the meeting</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <label>Meeting Minutes</label>
  <nameField>
    <label>Meeting Minutes Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Meeting Minutes</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>